[metadata]
name = rush
;version = attr: rush.__version__
description = A library for throttling algorithms
long-description = file: README.rst
home-page = https://github.com/sigmavirus24/rush
author = Ian Stapleton Cordasco
author-email = graffatcolmingov@gmail.com
keywords = throttles throttle algorithm gcra redis
license = MIT
license-file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable,
    Environment :: Console,
    Intended Audience :: Developers,
    License :: OSI Approved :: MIT License,
    Programming Language :: Python,
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7
requires =
    attrs (>= 18.1.0)

[options]
python_requires = >= 3.6
include-package-data = True
packages = find:
; Presently setuptools needs package-dir defined here and in setup.py
; https://github.com/pypa/setuptools/issues/1136
package-dir =
    = src

[options.package_data]
rush = py.typed

[options.packages.find]
where = src

[options.extras_require]
redis =
    redis
    rfc3986 >= 1.2.0

[bdist_wheel]
universal = 1


[mypy-redis]
ignore_missing_imports = True

[mypy-rfc3986]
ignore_missing_imports = True
