[metadata]
name = rush
;version = attr: rush.__version__
description = A library for throttling algorithms
long_description = file: README.rst
long_description_content_type = text/x-rst
home_page = https://github.com/sigmavirus24/rush
author = Ian Stapleton Cordasco
author_email = graffatcolmingov@gmail.com
keywords = throttles throttle algorithm gcra redis
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
; Presently setuptools needs package-dir defined here and in setup.py
; https://github.com/pypa/setuptools/issues/1136
package_dir =
    = src
install_requires =
    attrs >= 18.1.0

[options.package_data]
rush = py.typed

[options.packages.find]
where = src

[options.extras_require]
redis =
    redis
    rfc3986 >= 1.2.0
