[metadata]
name = limiterapp
description = An example application using rush
home-page = https://github.com/sigmavirus24/rush
author = Ian Stapleton Cordasco
author-email = graffatcolmingov@gmail.com
keywords = throttles throttle algorithm gcra redis
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python-requires = >= 3.6
include-package-data = True
packages = find:
; Presently setuptools needs package-dir defined here and in setup.py
; https://github.com/pypa/setuptools/issues/1136
package-dir =
    = src
install-requires =
    rush[redis] >= 2018.12.1
    Flask >= 1.0.2
    structlog >= 18.2.0

[options.packages.find]
where = src

; mypy config
[mypy-redis]
ignore_missing_imports = True

[mypy-rfc3986]
ignore_missing_imports = True

[flake8]
ignore = D203, W503, E203
max-complexity = 10
import-order-style = google
application-import-names = limiterapp
